--- a/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
+++ b/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
@@ -366,3 +366,5 @@ action:
               tag: "{{ notification_group }}_critical_error"
               sticky: true
               alert_once: false
+              push:
+                interruption-level: time-sensitive
