--- a/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
+++ b/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
@@ -170,8 +170,12 @@ action:
             value_template: "{{ states(print_status_entity) == 'complete' }}"
           - condition: or
             conditions:
-              - condition: template
-                value_template: "{{ trigger.entity_id == print_status_entity }}"
+              - condition: and
+                conditions:
+                  - condition: template
+                    value_template: "{{ trigger.entity_id == print_status_entity }}"
+                  - condition: template
+                    value_template: "{{ trigger.from_state.state != 'complete' }}"
               - condition: and
                 conditions:
                   - condition: template
@@ -194,45 +198,6 @@ action:
               push:
                 interruption-level: time-sensitive
 
-      # Handle print completion when status becomes idle (print finished)
-      - conditions:
-          - condition: template
-            value_template: "{{ notify_device != '' }}"
-          - condition: or
-            conditions:
-              - condition: and
-                conditions:
-                  - condition: template
-                    value_template: "{{ trigger.entity_id == print_status_entity }}"
-                  - condition: template
-                    value_template: "{{ states(print_status_entity) == 'idle' }}"
-                  - condition: template
-                    value_template: "{{ trigger.from_state.state != 'idle' }}"
-              - condition: and
-                conditions:
-                  - condition: template
-                    value_template: "{{ trigger.entity_id == current_status_entity }}"
-                  - condition: template
-                    value_template: "{{ states(current_status_entity) == 'idle' }}"
-                  - condition: template
-                    value_template: "{{ trigger.from_state.state != 'idle' }}"
-        sequence:
-          - device_id: !input notify_device
-            domain: mobile_app
-            type: notify
-            title: "🎉 Print Complete!"
-            message: "Print has finished successfully"
-            data:
-              image: "{{ ('/api/camera_proxy/' ~ camera_entity) if (camera_entity|default('', true)) != '' else '' }}"
-              url: "{{ dashboard_url }}"
-              clickAction: "{{ dashboard_url }}"
-              group: "{{ notification_group }}"
-              channel: "{{ notification_group }}"
-              tag: "{{ notification_group }}"
-              sticky: true
-              alert_once: true
-              push:
-                interruption-level: time-sensitive
 
       # Handle print status change notifications
       - conditions:
