--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "2.3.0-beta.15"
 requires-python = ">=3.13"
 description = "Home Assistant Addon for Elegoo Printers"
 dependencies = [
+    "aiomqtt>=2.3.0",
     "colorlog>=6.9.0",
     "homeassistant==2025.4.0",
     "loguru>=0.7.3",
