Fix CodeRabbit issues and improve MQTT printer handling
- Fix socket.timeout exception in discovery (use socket.timeout not TimeoutError)
- Fix MQTT listener exception handling (log and return, don't raise from background task)
- Add aiomqtt.MqttError to exception handling in _send_printer_cmd
- Fix sort_key type error (use .timestamp() for datetime comparison)
- Fix debug.py proxy_enabled parameter (branch by protocol type)
- Skip MQTT connection test in config flow (broker starts after setup)
- Remove unused mqtt_options step from config flow
- Fix AttributeError for mqtt_username/mqtt_password (remove auth logic)
- Add guard for missing print_info in debug.py
- Disable UP041 ruff rule for intentional TimeoutError usage

MQTT disconnect improvements:
- Add CMD_DISCONNECT (64) constant to SDCP
- Implement disconnect command in MQTT client cleanup
- Update test MQTT printer to handle disconnect and reconnect properly
- Fix broker shutdown hanging (remove shield, add timeout, reset ref count)
- Remove asyncio.shield from broker stop to allow cancellation
- Add 5-second timeout to broker stop to prevent hanging

Performance improvements:
- Change MQTT status update period from 5s to 2s for more responsive UI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ ignore = [
     "D212", # multi-line-summary-first-line (incompatible with formatter)
     "COM812", # incompatible with formatter
     "ISC001", # incompatible with formatter
+    "UP041", # Replace aliased errors with TimeoutError (we intentionally use built-in TimeoutError)
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
