--- a/custom_components/elegoo_printer/manifest.json
+++ b/custom_components/elegoo_printer/manifest.json
@@ -7,5 +7,5 @@
   "documentation": "https://github.com/danielcherubini/elegoo-homeassistant",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/danielcherubini/elegoo-homeassistant/issues",
-  "version": "2.4.0-beta.17"
+  "version": "2.4.0"
 }
