Add cc2_extractions/ to gitignore
Extraction script outputs JSONL files to cc2_extractions/ directory.
These are test output files and should not be committed to git.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage.xml
 config/*
 !config/configuration.yaml
 
+# CC2 extraction output
+cc2_extractions/
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
